--- a/application/admin/view/branch/county_add.html
+++ b/application/admin/view/branch/county_add.html
@@ -34,7 +34,7 @@
 				<label class="layui-form-label">排序</label>
 				<div class="layui-input-block">
 					<input type="text" id="name" name="region_sort" autocomplete="off"
-						placeholder="数值越大越靠前" class="layui-input">
+						placeholder="数值越小越靠前" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
