--- a/application/admin/view/cases/index.html
+++ b/application/admin/view/cases/index.html
@@ -61,6 +61,7 @@
                         , { field: 'collect_num', title: '收藏数', width: '6%' }
                         , { field: 'sort', title: '排序', width: '6%' }
                         , { field: 'is_zong', title: '总站', width: '6%' }
+                        , { field: 'recommend_name', title: '推荐位置', width: '6%' }
                         , { field: 'create_time', title: '创建时间', width: '12%' }
                         , {
                             field: 'handle', title: '操作',
