--- a/application/admin/view/article/article_edit.html
+++ b/application/admin/view/article/article_edit.html
@@ -86,6 +86,7 @@
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
             uploadJson: '/api/file/upload?type=article',
+            urlType:'domain',
             afterBlur: function(){
                 this.sync();
             }
