--- a/application/admin/view/notice/edit.html
+++ b/application/admin/view/notice/edit.html
@@ -43,7 +43,8 @@
 <script type="text/javascript">
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
-            uploadJson: '/api/file/upload?type=article',
+			uploadJson: '/api/file/upload?type=article',
+			urlType:'domain',
             afterBlur: function(){
                 this.sync();
             }
