--- a/application/admin/view/shop/shop_add.html
+++ b/application/admin/view/shop/shop_add.html
@@ -166,6 +166,7 @@
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
             uploadJson: '/api/file/upload?type=article',
+            urlType:'domain',
             afterBlur: function(){
                 this.sync();
             }
