--- a/application/admin/view/shop/shop_edit.html
+++ b/application/admin/view/shop/shop_edit.html
@@ -169,6 +169,7 @@
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
             uploadJson: '/api/file/upload?type=article',
+            urlType:'domain',
             afterBlur: function(){
                 this.sync();
             }
