--- a/application/admin/view/goods_cate/cate_index.html
+++ b/application/admin/view/goods_cate/cate_index.html
@@ -11,7 +11,7 @@
                 <tr>
                     <th>ID</th>
                     <th>分类名称</th>
-                    <th>绑定品牌</th>
+                    <th width="400">绑定品牌</th>
                     <th>状态</th>
                     <th>排序</th>
                     <th>操作</th>
